Fixes spiner folders and mobile menu z-index

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -90,6 +90,7 @@ a:focus {
 }
 .header-nav-list-toggle {
   --header-nav-list: translateX(0%);
+  z-index: 999;
 }
 @media(min-width: 54.6875rem) {
   .header-burger {
